syntax = "proto3";

package codehorse.mpaas.cronjob;

option go_package = "github.com/solodba/devcloud/mpaas/apps/cronjob";

// 导入外部包
import "apps/pod/pb/pod.proto";
import "common/pb/github.com/solodba/mcube/pb/meta/meta.proto";

// CreateCronJobRequest结构体
message CreateCronJobRequest {
    // @gotags: bson:"base" json:"base"
    CronJobBase Base = 1;
    // @gotags: bson:"template" json:"template"
    pod.Pod Template = 2;
}

// JobBase结构体
message JobBase {
    // @gotags: bson:"completions" json:"completions"
    int32 Completions = 1;
    // @gotags: bson:"backoffLimit" json:"backoffLimit"
    int32 BackoffLimit = 2;
}

// CronJobBase结构体
message CronJobBase {
    // @gotags: bson:"name" json:"name"
    string Name = 1;
    // @gotags: bson:"namespace" json:"namespace"
    string Namespace = 2;
    // @gotags: bson:"labels" json:"labels"
    repeated ListMapItem Labels = 3;
    // @gotags: bson:"schedule" json:"schedule"
    string Schedule = 4;
    // @gotags: bson:"suspend" json:"suspend"
    bool Suspend = 5;
    // @gotags: bson:"concurrencyPolicy" json:"concurrencyPolicy"
    string ConcurrencyPolicy = 6;
    // @gotags: bson:"successfulJobsHistoryLimit" json:"successfulJobsHistoryLimit"
    int32 SuccessfulJobsHistoryLimit = 7;
    // @gotags: bson:"failedJobsHistoryLimit" json:"failedJobsHistoryLimit"
    int32 FailedJobsHistoryLimit = 8;
    // @gotags: bson:"jobBase" json:"jobBase"
    JobBase JobBase = 9;
}

// 通用键值对结构体
message ListMapItem {
    // @gotags: bson:"key" json:"key"
    string Key = 1;
    // @gotags: bson:"value" json:"value"
    string Value = 2;
}

// CronJob结构体
message CronJob {
    // @gotags: bson:",inline" json:"meta"
    codehorse.mcube.meta.Meta Meta = 1;
    // @gotags: bson:",inline" json:"cronjob"
    CreateCronJobRequest CronJob = 2;
}

// CronJobSetItem结构体
message CronJobSetItem {
    // @gotags: bson:"name" json:"name"
    string Name = 1;
    // @gotags: bson:"namespace" json:"namespace"
    string Namespace = 2;
    // @gotags: bson:"schedule" json:"schedule"
    string Schedule = 3;
    // @gotags: bson:"suspend" json:"suspend"
    bool Suspend = 4;
    // @gotags: bson:"active" json:"active"
    int64 Active = 5;
    // @gotags: bson:"lastSchedule" json:"lastSchedule"
    int64 LastSchedule = 6;
    // @gotags: bson:"age" json:"age"
    int64 Age = 7;
}

// CronJobSet结构体
message CronJobSet {
    // @gotags: bson:"total" json:"total"
    int64 Total = 1;
    // @gotags: bson:"items" json:"items"
    repeated CronJobSetItem Items = 2;
}